Added MyBidDetailDTO and replaced some Strings with Constants